statics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statics-app
spec:
  type: "LoadBalancer"
  selector:
    app: statics-app
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
