statics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: statics-ingress
spec:
  rules:
    - http:
        paths:
          - path: /statics
            backend:
              service:
                name: statics-service
                port:
                  number: 80
